Improved profile design.

--- a/ShareHome/Base.lproj/Main.storyboard
+++ b/ShareHome/Base.lproj/Main.storyboard
@@ -23,55 +23,53 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pmb-Yw-ujF">
-                                <rect key="frame" x="67" y="318" width="254" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ztk-OM-i6Q">
-                                <rect key="frame" x="133" y="375" width="123" height="44"/>
-                                <color key="backgroundColor" red="0.46087688207626343" green="0.76168376207351685" blue="0.47533226013183594" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="xW7-ss-iNB"/>
-                                </constraints>
-                                <state key="normal" title="Sign Up">
-                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                </state>
-                                <connections>
-                                    <action selector="signUpPressed:" destination="zm6-f7-SkK" eventType="touchUpInside" id="NeP-ve-ykN"/>
-                                </connections>
-                            </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Username" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="jih-tE-UjK">
-                                <rect key="frame" x="67" y="264" width="254" height="30"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="livingRoom.jpg" translatesAutoresizingMaskIntoConstraints="NO" id="1Ta-77-o7l">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <visualEffectView opaque="NO" alpha="0.65000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kgS-4C-MBN">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" alpha="0.94999999999999996" contentMode="center" id="GSg-P0-z9r">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ShareHome" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ggf-Rj-Oay">
+                                            <rect key="frame" x="61" y="103" width="252" height="127"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="ggf-Rj-Oay" secondAttribute="height" multiplier="232:69" constant="-175.01449275362319" id="wDA-e5-ZM7"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="SnellRoundhand-Bold" family="Snell Roundhand" pointSize="50"/>
+                                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="ggf-Rj-Oay" firstAttribute="top" secondItem="GSg-P0-z9r" secondAttribute="top" constant="103" id="32D-2b-RwD"/>
+                                        <constraint firstItem="ggf-Rj-Oay" firstAttribute="leading" secondItem="GSg-P0-z9r" secondAttribute="leading" constant="61" id="7Qg-oC-lOW"/>
+                                        <constraint firstAttribute="trailing" secondItem="ggf-Rj-Oay" secondAttribute="trailing" constant="62" id="YCr-we-imG"/>
+                                    </constraints>
+                                </view>
+                                <blurEffect style="dark"/>
+                            </visualEffectView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Pmb-Yw-ujF" firstAttribute="top" secondItem="jih-tE-UjK" secondAttribute="bottom" constant="24" id="5aw-TF-0th"/>
-                            <constraint firstItem="jih-tE-UjK" firstAttribute="leading" secondItem="Mzu-a9-GB2" secondAttribute="leadingMargin" constant="51" id="62Z-J1-TYC"/>
-                            <constraint firstItem="ztk-OM-i6Q" firstAttribute="top" secondItem="Pmb-Yw-ujF" secondAttribute="bottom" constant="27" id="Sn0-H4-jXp"/>
-                            <constraint firstItem="Pmb-Yw-ujF" firstAttribute="leading" secondItem="Mzu-a9-GB2" secondAttribute="leadingMargin" constant="51" id="XDP-2x-p9y"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="jih-tE-UjK" secondAttribute="trailing" constant="38" id="dRs-Dr-QR3"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Pmb-Yw-ujF" secondAttribute="trailing" constant="38" id="eqR-Zk-Kli"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="ztk-OM-i6Q" secondAttribute="trailing" constant="103" id="fQU-Vi-lKk"/>
-                            <constraint firstItem="jih-tE-UjK" firstAttribute="top" secondItem="C6T-Nc-yg2" secondAttribute="bottom" constant="244" id="lxD-xn-GGd"/>
-                            <constraint firstItem="ztk-OM-i6Q" firstAttribute="leading" secondItem="Mzu-a9-GB2" secondAttribute="leadingMargin" constant="117" id="rZi-X0-XQY"/>
+                            <constraint firstItem="kgS-4C-MBN" firstAttribute="leading" secondItem="1Ta-77-o7l" secondAttribute="leading" id="3jO-rd-MDa"/>
+                            <constraint firstItem="kgS-4C-MBN" firstAttribute="top" secondItem="1Ta-77-o7l" secondAttribute="top" id="FU7-yz-e5q"/>
+                            <constraint firstItem="kgS-4C-MBN" firstAttribute="bottom" secondItem="ZMM-eX-OBe" secondAttribute="top" id="FUM-qZ-FgT"/>
+                            <constraint firstItem="1Ta-77-o7l" firstAttribute="leading" secondItem="Mzu-a9-GB2" secondAttribute="leading" id="Fc4-or-lXi"/>
+                            <constraint firstItem="1Ta-77-o7l" firstAttribute="bottom" secondItem="ZMM-eX-OBe" secondAttribute="top" id="Mng-Bm-QiB"/>
+                            <constraint firstItem="kgS-4C-MBN" firstAttribute="trailing" secondItem="1Ta-77-o7l" secondAttribute="trailing" id="NTa-6d-Lf8"/>
+                            <constraint firstAttribute="trailing" secondItem="1Ta-77-o7l" secondAttribute="trailing" id="QSL-JI-nsW"/>
+                            <constraint firstItem="1Ta-77-o7l" firstAttribute="top" secondItem="Mzu-a9-GB2" secondAttribute="top" id="lml-pq-dU4"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="loginName" destination="jih-tE-UjK" id="i9a-S6-EDw"/>
-                        <outlet property="passwordField" destination="Pmb-Yw-ujF" id="JJi-Pq-97C"/>
-                        <outlet property="signUpButton" destination="ztk-OM-i6Q" id="mza-Fa-Czg"/>
                         <segue destination="8Xg-dC-JEG" kind="show" identifier="toMainSegue" id="wAD-JO-yiX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PQZ-1L-UKL" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-961" y="901"/>
+            <point key="canvasLocation" x="-962.39999999999998" y="900.89955022488766"/>
         </scene>
         <!--Reveal View Controller-->
         <scene sceneID="Ysf-dZ-xne">
@@ -735,6 +733,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="livingRoom.jpg" width="736" height="981"/>
         <image name="placeholder.png" width="270" height="170"/>
     </resources>
     <inferredMetricsTieBreakers>
