--- a/ShareHome/Base.lproj/Main.storyboard
+++ b/ShareHome/Base.lproj/Main.storyboard
@@ -494,6 +494,9 @@
                                 <state key="normal" title="Create a group">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
+                                <connections>
+                                    <action selector="createGroupPressed:" destination="YpC-VC-Den" eventType="touchUpInside" id="trY-8O-fyw"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uh3-EH-bw9">
                                 <rect key="frame" x="215" y="455" width="117" height="44"/>
