--- a/ShareHome/Base.lproj/Main.storyboard
+++ b/ShareHome/Base.lproj/Main.storyboard
@@ -380,7 +380,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="375" height="201"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Shape" translatesAutoresizingMaskIntoConstraints="NO" id="iXq-Y2-ruG">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logout" translatesAutoresizingMaskIntoConstraints="NO" id="iXq-Y2-ruG">
                                             <rect key="frame" x="46" y="0.0" width="38" height="50.5"/>
                                             <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
@@ -919,9 +919,9 @@
         <image name="Make a Post" width="44" height="44"/>
         <image name="Profile" width="44" height="44"/>
         <image name="Schedule" width="44" height="44"/>
-        <image name="Shape" width="35" height="44"/>
         <image name="Transactions" width="44" height="44"/>
         <image name="livingRoom.jpg" width="736" height="981"/>
+        <image name="logout" width="44" height="44"/>
         <image name="placeholder.png" width="270" height="170"/>
     </resources>
     <inferredMetricsTieBreakers>
